2009-02-16  Ryan Lortie  <desrt@desrt.ca>

	Bug 571598 – GAsyncResult with NULL gobject

	* gsimpleasyncresult.c: remove various assertions and add some checks
	to allow for a NULL source_object in GSimpleAsyncResult.

2009-02-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 541225 – Can't compile gio on AIX : duplicate case value in 
	gioerror.c

	* gioerror.c (g_io_error_from_errno): Cope with EEXIST == ENOTEMPTY. 
	Reported by Nicolas Joseph 

2009-02-04  Alexander Larsson  <alexl@redhat.com>

	Bug 566747 - URIs opened with firefox %u load as local files

	* gdummyfile.c (g_dummy_file_get_path):
	Dummy files are never used for local paths, so always return NULL
	in get_path(). 

2009-02-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.6 ===

2009-01-31  Paolo Borelli  <pborelli@katamail.com>

	* glocalfileinfo.c: plug a tiny mem leak.

2009-01-29  Ryan Lortie  <desrt@desrt.ca>

	* gioerror.c (g_io_error_from_errno): handle all possible cases of
	EAGAIN and EWOULDBLOCK being (un)defined and (un)equal.

2009-01-28  Ryan Lortie  <desrt@desrt.ca>

	Bug 568575 – _async functions for GDataInputStream

	* gdatainputstream.h:
	* gdatainputstream.c: add _async versions of read_line and read_until.
	* gio.symbols:
	* ../docs/reference/gio/gio-sections.txt: add new functions
	* tests/sleepy-stream.c: new test case for async read line
	* tests/Makefile.am: add new test

2009-01-22  Ryan Lortie  <desrt@desrt.ca>

	Bug 568723 – g_buffered_input_stream_fill_async doesn't take count == -1

	* gbufferedinputstream.c (g_buffered_input_stream_fill_async,
	g_buffered_input_stream_fill): check for count < -1 instead of count <
	0 and copy modified check to non-async version for consistency.
	document the "count = -1" API.

2009-01-22  Ryan Lortie  <desrt@desrt.ca>

	Bug 568741 – g_buffered_input_stream_fill_async doesn't work

	* gbufferedinputstream.c (fill_async_callback): grow the buffer tail
	after we have successfully read data from the base stream
