@@ -1,3 +1,12 @@
+2009-02-13  Ryan Lortie  <desrt@desrt.ca>
+
+	Bug 505042 – add file attribute for actually used file size in bytes
+
+	* gfileinfo.h: add G_FILE_ATTRIBUTE_STANDARD_ALLOCATED_SIZE define to
+	"standard::allocated-size"
+	* gfileattribute.c: document
+	* glocalfileinfo.c: set the allocated size from st_blocks * 512
+
 2009-02-16  Ryan Lortie  <desrt@desrt.ca>
 
 	Bug 571598 – GAsyncResult with NULL gobject
